force-app/main/default/objects/Account/fields/Doorpack_Addrfix__c.field-meta.xml
<CustomField>
    <fullName>Doorpack_Addrfix__c</fullName>
    <label>Doorpack Addrfix</label>
    <length>50</length>
    <type>Text</type>
</CustomField>