force-app/main/default/objects/Account/fields/Doorpack_Billing_Address_4__c.field-meta.xml
<CustomField>
    <fullName>Doorpack_Billing_Address_4__c</fullName>
    <label>Doorpack Billing Address 4</label>
    <length>50</length>
    <type>Text</type>
</CustomField>