force-app/main/default/objects/Account/fields/Doorpack_CompanyName__c.field-meta.xml
<CustomField>
    <fullName>Doorpack_CompanyName__c</fullName>
    <label>Doorpack CompanyName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>