force-app/main/default/objects/Account/fields/Doorpack_CurBalance__c.field-meta.xml
<CustomField>
    <fullName>Doorpack_CurBalance__c</fullName>
    <label>Doorpack CurBalance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>