force-app/main/default/objects/Account/fields/Doorpack_DfltBillName__c.field-meta.xml
<CustomField>
    <fullName>Doorpack_DfltBillName__c</fullName>
    <label>Doorpack DfltBillName</label>
    <length>50</length>
    <type>Text</type>
</CustomField>