force-app/main/default/objects/Account/fields/Doorpack_ItemSalesTaxRefFullName__c.field-meta.xml
<CustomField>
    <fullName>Doorpack_ItemSalesTaxRefFullName__c</fullName>
    <label>Doorpack ItemSalesTaxRefFullName</label>
    <length>20</length>
    <type>Text</type>
</CustomField>