force-app/main/default/objects/Account/fields/Doorpack_JobDesc__c.field-meta.xml
<CustomField>
    <fullName>Doorpack_JobDesc__c</fullName>
    <label>Doorpack JobDesc</label>
    <length>100</length>
    <type>Text</type>
</CustomField>