force-app/main/default/objects/Account/fields/Doorpack_ListID__c.field-meta.xml
<CustomField>
    <fullName>Doorpack_ListID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>This is the Doorpack Account ID</inlineHelpText>
    <label>Doorpack ListID</label>
    <length>25</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>