force-app/main/default/objects/Account/fields/Doorpack_ParentRefListId__c.field-meta.xml
<CustomField>
    <fullName>Doorpack_ParentRefListId__c</fullName>
    <label>Doorpack ParentRefListId</label>
    <length>25</length>
    <type>Text</type>
</CustomField>