force-app/main/default/objects/Account/fields/Doorpack_SalesRepRefFullName__c.field-meta.xml
<CustomField>
    <fullName>Doorpack_SalesRepRefFullName__c</fullName>
    <label>Doorpack SalesRepRefFullName</label>
    <length>10</length>
    <type>Text</type>
</CustomField>