force-app/main/default/objects/Account/fields/Doorpack_SalesTaxCodeRefFullName__c.field-meta.xml
<CustomField>
    <fullName>Doorpack_SalesTaxCodeRefFullName__c</fullName>
    <label>Doorpack SalesTaxCodeRefFullName</label>
    <length>10</length>
    <type>Text</type>
</CustomField>