force-app/main/default/objects/Account/fields/Doorpack_Shipping_Address_3__c.field-meta.xml
<CustomField>
    <fullName>Doorpack_Shipping_Address_3__c</fullName>
    <label>Doorpack Shipping Address 3</label>
    <length>50</length>
    <type>Text</type>
</CustomField>