force-app/main/default/objects/Account/fields/Doorpack_TermsRefFullName__c.field-meta.xml
<CustomField>
    <fullName>Doorpack_TermsRefFullName__c</fullName>
    <label>Doorpack TermsRefFullName</label>
    <length>30</length>
    <type>Text</type>
</CustomField>