force-app/main/default/objects/Account/fields/Doorpack_Territory__c.field-meta.xml
<CustomField>
    <fullName>Doorpack_Territory__c</fullName>
    <label>Doorpack Territory</label>
    <length>10</length>
    <type>Text</type>
</CustomField>