force-app/main/default/objects/Account/fields/Doorpack_Type__c.field-meta.xml
<CustomField>
    <fullName>Doorpack_Type__c</fullName>
    <label>Doorpack Type</label>
    <length>5</length>
    <type>Text</type>
</CustomField>