force-app/main/default/objects/Account/fields/QBO_SyncToken__c.field-meta.xml
<CustomField>
    <fullName>QBO_SyncToken__c</fullName>
    <label>QBO SyncToken</label>
    <length>255</length>
    <type>Text</type>
</CustomField>