force-app/main/default/objects/Account/listViews/Vendor_Accounts.listView-meta.xml
<ListView>
    <fullName>Vendor_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.TYPE</field>
        <operation>equals</operation>
        <value>Vendor</value>
    </filters>
    <label>Vendor Accounts</label>
</ListView>